Updated Service Section

--- a/index.html
+++ b/index.html
@@ -295,77 +295,77 @@
     </div>
   </div>
 </section>
- <!-- Services Preview Section -->
-<section id="services" class="section services-section section-reveal">
-  <div class="container">
-    <div class="section-header">
-      <h2 class="section-title">My <span class="primary-text">Services</span></h2>
-      <p class="section-subtitle">Professional digital solutions to transform your business</p>
-      <div class="section-underline"></div>
-    </div>
-    
-    <div class="services-grid">
-      <!-- Service Card 1: Shopify Store Designing -->
-      <div class="service-card glass" onclick="openServiceModal('shopify')">
-        <div class="service-thumbnail">
-          <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600" alt="Shopify Store Design">
-          <div class="service-badge">Featured</div>
-        </div>
-        <div class="service-content">
-          <h3>Shopify Store Designing</h3>
-          <p>Professional e-commerce design with conversion optimization</p>
-          <div class="service-rating">
-            <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span>(127 reviews)</span>
-          </div>
-          <div class="service-price">Starting at <span>$199</span></div>
-        </div>
-      </div>
+<!-- Services Preview Section -->
+    <section id="services" class="section services-section section-reveal">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">My <span class="primary-text">Services</span></h2>
+                <p class="section-subtitle">Professional digital solutions to transform your business</p>
+                <div class="section-underline"></div>
+            </div>
+            
+            <div class="services-grid">
+                <!-- Service Card 1: Shopify Store Designing -->
+                <div class="service-card glass" onclick="openServiceModal('shopify')">
+                    <div class="service-thumbnail">
+                        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=675&q=85" alt="Shopify Store Design">
+                        <div class="service-badge">Featured</div>
+                    </div>
+                    <div class="service-content">
+                        <h3>Shopify Store Designing</h3>
+                        <p>Professional e-commerce design with conversion optimization and modern UI/UX principles</p>
+                        <div class="service-rating">
+                            <div class="stars">⭐⭐⭐⭐⭐</div>
+                            <span>(127 reviews)</span>
+                        </div>
+                        <div class="service-price">Starting at <span>$199</span></div>
+                    </div>
+                </div>
 
-      <!-- Service Card 2: Frontend Website Designing -->
-      <div class="service-card glass" onclick="openServiceModal('frontend')">
-        <div class="service-thumbnail">
-          <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600" alt="Frontend Development">
-          <div class="service-badge">Popular</div>
-        </div>
-        <div class="service-content">
-          <h3>Frontend Website Designing</h3>
-          <p>Modern responsive websites with cutting-edge technology</p>
-          <div class="service-rating">
-            <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span>(89 reviews)</span>
-          </div>
-          <div class="service-price">Starting at <span>$299</span></div>
-        </div>
-      </div>
+                <!-- Service Card 2: Frontend Website Designing -->
+                <div class="service-card glass" onclick="openServiceModal('frontend')">
+                    <div class="service-thumbnail">
+                        <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=675&q=85" alt="Frontend Development">
+                        <div class="service-badge">Popular</div>
+                    </div>
+                    <div class="service-content">
+                        <h3>Frontend Website Designing</h3>
+                        <p>Modern responsive websites with cutting-edge technology and seamless user experience</p>
+                        <div class="service-rating">
+                            <div class="stars">⭐⭐⭐⭐⭐</div>
+                            <span>(89 reviews)</span>
+                        </div>
+                        <div class="service-price">Starting at <span>$299</span></div>
+                    </div>
+                </div>
 
-      <!-- Service Card 3: AI Talking Avatars -->
-      <div class="service-card glass" onclick="openServiceModal('ai-avatar')">
-        <div class="service-thumbnail">
-          <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600" alt="AI Talking Avatars">
-          <div class="service-badge">Trending</div>
-        </div>
-        <div class="service-content">
-          <h3>AI Talking Avatars</h3>
-          <p>Interactive AI-powered avatars for engaging presentations</p>
-          <div class="service-rating">
-            <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span>(234 reviews)</span>
-          </div>
-          <div class="service-price">Starting at <span>$149</span></div>
-        </div>
-      </div>
-    </div>
+                <!-- Service Card 3: AI Talking Avatars -->
+                <div class="service-card glass" onclick="openServiceModal('ai-avatar')">
+                    <div class="service-thumbnail">
+                        <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=675&q=85" alt="AI Talking Avatars">
+                        <div class="service-badge">Trending</div>
+                    </div>
+                    <div class="service-content">
+                        <h3>AI Talking Avatars</h3>
+                        <p>Interactive AI-powered avatars for engaging presentations and customer interactions</p>
+                        <div class="service-rating">
+                            <div class="stars">⭐⭐⭐⭐⭐</div>
+                            <span>(234 reviews)</span>
+                        </div>
+                        <div class="service-price">Starting at <span>$149</span></div>
+                    </div>
+                </div>
+            </div>
 
-    <!-- See All Gigs Button -->
-    <div class="services-cta">
-      <a href="services.html" class="btn-primary services-btn">
-        <span>See All Gigs</span>
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-  </div>
-</section>
+            <!-- See All Gigs Button -->
+            <div class="services-cta">
+                <a href="services.html" class="btn-primary services-btn">
+                    <span>See All Gigs</span>
+                    <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </section>
 <!-- Projects Section -->
 <section id="projects" class="section projects-section section-reveal">
   <div class="container">
