updated projcet section images case study images blog images

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       <!-- Shopify Project -->
       <div class="project-item glass" data-categories="shopify">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="Shopify Store">
+          <img src="images\Shopify image for project section  image  by Muatasim Billah.png" alt="Shopify Store">
           <div class="project-overlay">
             <a href="projects/ecommerce-redesign.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project
@@ -411,7 +411,7 @@
       <!-- Frontend Project -->
       <div class="project-item glass" data-categories="frontend">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y29kaW5nfGVufDB8fDB8fHww" alt="Web Development">
+          <img src="images\Web Devolpment project section  image  by Muatasim Billah.png" alt="Web Development">
           <div class="project-overlay">
             <a href="projects/web-development.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project
@@ -433,7 +433,7 @@
       <!-- Audio Engineering Project -->
       <div class="project-item glass" data-categories="audio">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1478737270239-2f02b77fc618?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8YXVkaW98ZW58MHx8MHx8fDA%3D" alt="Audio Engineering">
+          <img src="images\Audio Editing project section  image  by Muatasim Billah.png" alt="Audio Engineering">
           <div class="project-overlay">
             <a href="projects/audio-engineering.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project <i class="fas fa-volume-up media-icon"></i>
@@ -442,7 +442,7 @@
         </div>
         <div class="project-info">
           <h3>Audio Engineering</h3>
-          <p>Professional audio mixing and mastering for music production.</p>
+          <p>Professional audio Editing and mastering for Podcast Audiobook And more..</p>
           <div class="project-tags">
             <span class="project-tag">Mixing</span>
             <span class="project-tag">Mastering</span>
@@ -455,7 +455,7 @@
       <!-- AI Voice Project -->
       <div class="project-item glass" data-categories="voice">
         <div class="project-image">
-          <img src="https://plus.unsplash.com/premium_photo-1664195074951-fe91ec456eed?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fG1pY3JvcGhvbmV8ZW58MHx8MHx8fDA%3D" alt="AI Voice Over">
+          <img src="images\AI voiceover project section  image  by Muatasim Billah.png" alt="AI Voice Over">
           <div class="project-overlay">
             <a href="projects/ai-voice.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project <i class="fas fa-volume-up media-icon"></i>
@@ -477,7 +477,7 @@
       <!-- AI Avatar Project -->
       <div class="project-item glass" data-categories="avatars">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1674027444485-cec3da58eef4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YWl8ZW58MHx8MHx8fDA%3D" alt="AI Avatar">
+          <img src="images\Ai avtar  image  by Muatasim Billah.png" alt="AI Avatar">
           <div class="project-overlay">
             <a href="projects/ai-avatar.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project <i class="fas fa-video media-icon"></i>
@@ -499,7 +499,7 @@
       <!-- Canva Project -->
       <div class="project-item glass" data-categories="canva">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1626785774573-4b799315345d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="Graphic Design">
+          <img src="images\Canva graphic designing project section  image  by Muatasim Billah.png" alt="Graphic Design">
           <div class="project-overlay">
             <a href="projects/graphic-design.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project
@@ -848,33 +848,33 @@
     <div class="case-studies-highlights">
       <div class="case-study-card-preview glass">
         <div class="case-study-image-preview">
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" alt="TechGear Store">
+          <img src="images\cleint hard project Image by muatasim billah.png" alt="TechGear Store">
         </div>
         <div class="case-study-content-preview">
           <div class="case-tags-preview">
-            <span class="tag">E-commerce</span>
-            <span class="tag">Shopify</span>
+            <span class="tag">Fiverr Upwork</span>
+            <span class="tag">freelancing</span>
           </div>
-          <h3>TechGear Store</h3>
-          <p>Increased sales by 340% with modern Shopify redesign</p>
+          <h3>Hardsest Project</h3>
+          <p>The Most Difficult Project in My Freelancing Journey</p>
           <div class="case-metric-preview">
             <i class="fas fa-chart-line"></i>
-            <span>340% Revenue Increase</span>
+            <span>Challenge</span>
           </div>
         </div>
       </div>
       
       <div class="case-study-card-preview glass featured">
         <div class="case-study-image-preview">
-          <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" alt="Bella Vista Restaurant">
+          <img src="images\Algorithm Core Case Study  image  by Muatasim Billah.jpg" alt="Bella Vista Restaurant">
         </div>
         <div class="case-study-content-preview">
           <div class="case-tags-preview">
-            <span class="tag">Restaurant</span>
-            <span class="tag">Marketing</span>
+            <span class="tag">Fiverr</span>
+            <span class="tag">Algorithm</span>
           </div>
-          <h3>Bella Vista Restaurant</h3>
-          <p>Built 50K+ social media following from zero</p>
+          <h3>Cracking Algorithm</h3>
+          <p>Cracking the Fiverr Algorithm: What Actually Works</p>
           <div class="case-metric-preview">
             <i class="fas fa-heart"></i>
             <span>50K+ Followers</span>
@@ -884,15 +884,15 @@
       
       <div class="case-study-card-preview glass">
         <div class="case-study-image-preview">
-          <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" alt="FitCore Gym">
+          <img src="images\What i learn Case Study  image  by Muatasim Billah.png" alt="FitCore Gym">
         </div>
         <div class="case-study-content-preview">
           <div class="case-tags-preview">
-            <span class="tag">Fitness</span>
-            <span class="tag">AI Avatar</span>
+            <span class="tag">Secret</span>
+            <span class="tag">Fiverr</span>
           </div>
-          <h3>FitCore AI System</h3>
-          <p>Revolutionary AI training with talking avatars</p>
+          <h3>How to win Fievrr Game</h3>
+          <p>What I Learned from Fiverr SECRETS</p>
           <div class="case-metric-preview">
             <i class="fas fa-robot"></i>
             <span>1000+ Users</span>
