updated case study images

--- a/case-studies/Case-study.html
+++ b/case-studies/Case-study.html
@@ -75,7 +75,7 @@
                 <!-- Story Card 1 -->
                 <div class="case-study-story-card glass" data-category="challenges">
                     <div class="story-image">
-                        <img src="../images/the most difficult project in freelacing journey image by muatasim.jpg">
+                        <img src="../images/THE MOST DIFFICULT PROJECT OF MY FREELANCING JOURNEY.png">
                     </div>
                     <div class="story-content">
                         <div class="story-category">Challenge</div>
@@ -92,7 +92,7 @@
                 <!-- Story Card 2 -->
                 <div class="case-study-story-card glass" data-category="fiverr">
                     <div class="story-image">
-                        <img src="../images/New What i learn Case Study  image  by Muatasim Billah.jpg" alt="Fiverr Journey">
+                        <img src="../images/lesson learned from fiverr  image by muatasim billah.png" alt="Fiverr Journey">
                     </div>
                     <div class="story-content">
                         <div class="story-category">Fiverr Experience</div>
@@ -126,7 +126,7 @@
                 <!-- Story Card 4 -->
                 <div class="case-study-story-card glass" data-category="learnings">
                     <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1553028826-f4804a6dba3b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&h=300" alt="Client Communication">
+                        <img src="../images/Cleint handeling  image by muatasim billah.png" alt="Client Communication">
                     </div>
                     <div class="story-content">
                         <div class="story-category">Learning</div>
@@ -160,7 +160,7 @@
                 <!-- Story Card 6 -->
                 <div class="case-study-story-card glass" data-category="fiverr">
                     <div class="story-image">
-                        <img src="../images/cracking the fiverr algorithm by muatasim billah.png" alt="Fiverr Algorithm">
+                        <img src="../images/top ranking  image by muatasim billah.png" alt="Fiverr Algorithm">
                     </div>
                     <div class="story-content">
                         <div class="story-category">Fiverr Experience</div>
