--- a/case-studies/story-fiverr-learnings.html
+++ b/case-studies/story-fiverr-learnings.html
@@ -747,7 +747,7 @@
                     <div class="study-content">
                         <h4>Cracking the Fiverr Algorithm</h4>
                         <p>The exact SEO workflow that gets gigs ranked on page 1</p>
-                        <a href="fiverr-algorithm.html" class="study-link">Read Case Study <i class="fas fa-arrow-right"></i></a>
+                        <a href="story-fiverr-algorithm.html" class="study-link">Read Case Study <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
