--- a/case-studies/story-hardest-project.html
+++ b/case-studies/story-hardest-project.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="story-image">
-                <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01jykdpthsf2wtcqgnxn6j84wy%2F1750851241_img_1.webp?st=2025-06-25T10%3A07%3A55Z&se=2025-07-01T11%3A07%3A55Z&sks=b&skt=2025-06-25T10%3A07%3A55Z&ske=2025-07-01T11%3A07%3A55Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=kQSG2O1An%2Fefxhl5SmV2UeqIwTL5pWipyWrK9Ufku%2BY%3D&az=oaivgprodscus" alt="Audio restoration project">
+                <img src="../images/THE MOST DIFFICULT PROJECT OF MY FREELANCING JOURNEY.png" alt="Audio restoration project">
                 <div class="image-overlay"></div>
             </div>
         </section>
