--- a/gigs/Main-services.html
+++ b/gigs/Main-services.html
@@ -100,7 +100,7 @@
                                 <span class="price-amount">$199</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/shopify-store-design.html" class="btn-explore">
+                                <a href="../explore-gigs/shopify-store-design.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/create-professional-shopify-store" class="btn-fiverr" target="_blank">
@@ -136,7 +136,7 @@
                                 <span class="price-amount">$299</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/frontend-website-design.html" class="btn-explore">
+                                <a href="../explore-gigs/frontend-website-design.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/design-modern-frontend-website" class="btn-fiverr" target="_blank">
@@ -172,7 +172,7 @@
                                 <span class="price-amount">$149</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/ai-talking-avatars.html" class="btn-explore">
+                                <a href="../explore-gigs/ai-talking-avatars.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/create-ai-talking-avatar" class="btn-fiverr" target="_blank">
@@ -208,7 +208,7 @@
                                 <span class="price-amount">$49</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/canva-expert-services.html" class="btn-explore">
+                                <a href="../explore-gigs/canva-expert-services.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/design-graphics-with-canva" class="btn-fiverr" target="_blank">
@@ -244,7 +244,7 @@
                                 <span class="price-amount">$79</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/ai-voice-over-services.html" class="btn-explore">
+                                <a href="../explore-gigs/ai-voice-over-services.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/create-ai-voice-over" class="btn-fiverr" target="_blank">
@@ -280,7 +280,7 @@
                                 <span class="price-amount">$199</span>
                             </div>
                             <div class="service-buttons">
-                                <a href="explore-gigs/audio-engineering.html" class="btn-explore">
+                                <a href="../explore-gigs/audio-engineering.html" class="btn-explore">
                                     <i class="fas fa-eye"></i> Explore Gig
                                 </a>
                                 <a href="https://www.fiverr.com/mehar_ai_studio/mix-master-audio" class="btn-fiverr" target="_blank">
