--- a/Pricing/pricing.html
+++ b/Pricing/pricing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pricing - Muatasim Billah</title>
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="pricing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <!-- Google Analytics (non-critical, can load after CSS) -->
@@ -1236,6 +1236,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="pricing.js"></script>
-  <script src="js\main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
