Updated Hero section Image

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
           <div class="image-wrapper">
             <div class="image-blob"></div>
             <div class="glass-frame">
-              <img src="images\ChatGPT Image Apr 14, 2025, 02_25_56 PM.png" alt="Muatasim Billah">
+              <img src="images\Hero section Png image Of muatasim  Billah (1).jpg" alt="Muatasim Billah">
             </div>
           </div>
         </div>
@@ -564,7 +564,7 @@
       <div class="about-content">
         <div class="about-image">
           <div class="image-frame">
-            <img src="images\ChatGPT Image Apr 14, 2025, 02_15_46 PM.png" alt="About Muatasim">
+            <img src="images\Muatasim Billah About Section Png Image (2).jpg" alt="About Muatasim">
           </div>
         </div>
         <div class="about-text">
