Added A new Case study About The real side Of bano qabil

--- a/case-studies/Case-study.html
+++ b/case-studies/Case-study.html
@@ -105,7 +105,23 @@
                         <a href="story-fiverr-learnings.html" class="btn-primary">View Full Story</a>
                     </div>
                 </div>
+<!-- Story Card 2 -->
+                <div class="case-study-story-card glass" data-category="fiverr">
+                    <div class="story-image">
+                        <img src="../images\bano qabil real dark side.png" alt="Fiverr Journey">
+                    </div>
+                    <div class="story-content">
+                        <div class="story-category">Bano Qabil</div>
+                       <h3>What It Feels Like to Be Used and Ignored — My Bano Qabil Experience</h3>
+<p>A heartfelt account of dreams crushed, promises broken, and how the system failed the very student it once praised.</p>
 
+                        <div class="story-meta">
+                            <span><i class="fas fa-calendar"></i> 3 months ago</span>
+                            <span><i class="fas fa-clock"></i> 8 min read</span>
+                        </div>
+                        <a href="story-Bano-qabil-Experiance.html" class="btn-primary">View Full Story</a>
+                    </div>
+                </div>
                 <!-- Story Card 3 -->
                 <div class="case-study-story-card glass" data-category="success">
                     <div class="story-image">
