updated Bano qabil section

--- a/case-studies/story-Bano-qabil-Experiance.html
+++ b/case-studies/story-Bano-qabil-Experiance.html
@@ -67,7 +67,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
+    <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
     {
@@ -253,7 +260,7 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <span>SR</span>
+                    <span>MB</span>
                 </div>
                 <div class="author-info">
                     <h3>Written by: MuatasimBillah</h3>
@@ -468,7 +475,7 @@
                             <div class="ceremony-marker"></div>
                             <div class="ceremony-content">
                                 <h4>Success Stories</h4>
-                                <p>Jiska performance kuch nahi tha, usko stage par bulaya</p>
+                                <p>Muatasim ka name Ghaib Kise our ko bulaya</p>
                             </div>
                         </div>
                     </div>
