Added New Case Study

--- a/case-studies/Case-study.html
+++ b/case-studies/Case-study.html
@@ -135,7 +135,7 @@
                 <!-- Story Card 3 -->
                 <div class="case-study-story-card glass" data-category="success">
                     <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&h=300"
+                        <img src="../images/bano qabil reality.png"
                             alt="First Big Success">
                     </div>
                     <div class="story-content">
